Don't assume that the permission manager exists.

It's valid for a browser context's permission manager to return NULL.
Handle this case in Push Messaging by immediately rejecting the request
instead.

BUG=695418

Review-Url: https://codereview.chromium.org/2706243007
Cr-Commit-Position: refs/heads/master@{#452489}

Former-commit-id: ea60d1f2365d4715d25c4bdfb13c6749a2302a8f